# tsel

./: CHANGELOG.md  LICENSE  README.md  in.txt  pyproject.toml
lesh/: __init__.py
sample-data/: gcloud-compute-machine-types.list  gcloud-compute-zones.list  kubectl-get-nodes.list  kubectl-get-pods.list
tsel/: __init__.py  __main__.py  utils.py
